--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "chromedriver": "^2.42",
     "geckodriver": "^1.12.2",
-    "selenium-server": "^3.14.0"
+    "selenium-server": "^3.14.0",
+    "safaridriver": "^3.9"
   }
 }
